--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,33 @@
     transform: rotate(360deg);
   }
 }
+
+
+.wrapper{
+  height: 100vh;
+  width: 100vw;
+  background-color: #f7eceb;
+  display: grid;
+  grid-template-columns: repeat(1fr,6);
+  grid-template-rows: repeat(1fr,6);
+}
+
+.header{
+display:grid;
+grid-column: 3/7;
+grid-row: 1/1;
+}
+
+.sign-up{
+display:grid;
+grid-column: 3/7;
+grid-row: 2/7;
+}
+
+.btn{
+  height: 55px;
+  width: 175px;
+  border-radius: 30px;
+  display:grid;
+  grid-row: 6/7;
+}
